<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBillingAddr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/tvBilling"
        style="@style/TextLargeBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/payment_billing_header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line"
        android:layout_margin="@dimen/margin_medium"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@+id/tvBilling"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/payment_billing_name_title"
        android:textColor="@color/colorDarkText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBilling" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/editTextBackgroundColor"
        app:cardCornerRadius="@dimen/corner_radius_card"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <EditText
            android:id="@+id/etName"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_billing_name_placeholder"
            android:inputType="textPersonName"
            android:padding="@dimen/margin_medium" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/payment_billing_address_title"
        android:textColor="@color/colorDarkText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/editTextBackgroundColor"
        app:cardCornerRadius="@dimen/corner_radius_card"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddr">

        <EditText
            android:id="@+id/etAddr"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_billing_address_placeholder"
            android:inputType="textPersonName"
            android:padding="@dimen/margin_medium" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/payment_billing_city_title"
        android:textColor="@color/colorDarkText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAddress" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/corner_radius_card"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/editTextBackgroundColor"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity">

        <EditText
            android:id="@+id/etCity"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:inputType="text"
            android:hint="@string/payment_billing_city_placeholder" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvZIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/zip"
        android:textColor="@color/colorDarkText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="@id/tvCity"
        app:layout_constraintBottom_toBottomOf="@id/tvCity"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvZip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/corner_radius_card"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/editTextBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tvCity">

        <EditText
            android:id="@+id/etZip"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:hint="@string/payment_billing_zip_placeholder" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/payment_billing_country_title"
        android:textColor="@color/colorDarkText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvCity"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/editTextBackgroundColor"
        app:cardCornerRadius="@dimen/corner_radius_card"
        app:cardElevation="2dp"
        app:strokeWidth="@dimen/stroke_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry">

        <EditText
            android:id="@+id/etCountry"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_billing_country_placeholder"
            android:inputType="textCapCharacters"
            android:maxLength="3"
            android:padding="@dimen/margin_medium" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/cvCountry">
    </View>


</androidx.constraintlayout.widget.ConstraintLayout>