<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PaymentFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCardNumber"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:layout_marginTop="@dimen/height_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_visa_logo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.maxpay.sdk.ui.view.input.MaskEditText
            android:id="@+id/etSurname"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            app:edit_text_mask="@string/mask_credit_card_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilExpiry"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:hint="@string/expiry"
        app:layout_constraintEnd_toStartOf="@id/ilCVC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilCardNumber">

        <com.maxpay.sdk.ui.view.input.MaskEditText
            android:id="@+id/etPassportSeries"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            app:edit_text_mask="@string/mask_expiry"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCVC"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_medium"
        android:hint="@string/cvc"
        app:layout_constraintEnd_toStartOf="@id/ilZIP"
        app:layout_constraintStart_toEndOf="@id/ilExpiry"
        app:layout_constraintTop_toTopOf="@+id/ilExpiry">

        <com.maxpay.sdk.ui.view.input.MaskEditText
            android:id="@+id/etPassportNumber"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            app:edit_text_mask="@string/mask_cvc"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilZIP"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_medium"
        android:hint="@string/zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ilCVC"
        app:layout_constraintTop_toTopOf="@+id/ilExpiry">

        <com.maxpay.sdk.ui.view.input.MaskEditText
            android:id="@+id/etZip"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            app:edit_text_mask="@string/mask_zip_code"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/payBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Send"
        app:layout_constraintTop_toBottomOf="@+id/ilExpiry" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_simple_toolbar"
        app:layout_constraintTop_toTopOf="parent" />


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/ilAutoComplete"-->
<!--        style="@style/AppInputLayoutStyle"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingLeft="@dimen/padding_medium"-->
<!--        android:hint="@string/zip"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/ilCVC"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/payBtn">-->

<!--        <com.maxpay.sdk.ui.view.input.MaskEditText-->
<!--            android:id="@+id/etAu"-->
<!--            style="@style/AppInputEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="number"-->
<!--            app:edit_text_mask="AutoComplete"/>-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilAutoComplete"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_medium"
        android:hint="@string/zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ilCVC"
        app:layout_constraintTop_toBottomOf="@+id/payBtn">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
            android:id="@+id/etAu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            app:edit_text_mask="AutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>